# Legend

./: .gitignore  CODEBASE_RULES.md  CONTRIBUTING.md  README.md  SECURITY.md  _TEMPLATE.md  c4_context.md  environment.yml  start.ps1  start.sh
.github/workflows/: ci.yml  docker.yml
Natural_Language_Code/Frontend/: info_frontend.md
Natural_Language_Code/chat/: info_chat.md
Natural_Language_Code/component_discovery/: info_component_discovery.md  info_component_discovery_scip_indexing.md
Natural_Language_Code/database/: info_database.md
Natural_Language_Code/legend_map/: info_legend_map.md
Natural_Language_Code/map_descriptions/: info_map_descriptions.md  info_map_descriptions_component.md  info_map_descriptions_module.md
Natural_Language_Code/map_editor/: info_map_editor.md
Natural_Language_Code/opencode_runner/: info_opencode_runner.md  info_opencode_runner_L2_clustering.md
backend/: chat.py  db.py  debug_scip.py  main.py  mcp_server.py  prompts.py  requirements.txt  validate_setup.py
backend/scip-engine/legend-indexer/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.test  README.md  build-base.sh  docker-build.sh  docker-pull.sh
backend/scip-engine/legend-indexer/src/: config.rs  detect.rs  lib.rs  main.rs  orchestrate.rs
backend/scip-engine/legend-indexer/tests/: integration_test.rs  language_pipelines_test.rs  real_repo_test.rs  robustness_test.rs
backend/scip-engine/legend-indexer/tests/common/: mod.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+81 files in other folders)
