[package]
name = "legend-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Legend Team"]
description = "Universal SCIP indexer runner — produces raw .scip files from any codebase"
license = "MIT"
repository = "https://github.com/legend-app/legend-indexer"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system utilities
walkdir = "2.4"
glob = "0.3"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Binary lookup
which = "6.0"

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "legend-indexer"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
